resources/manifests/mongo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongo-pod
  labels:
    app: disco-service
spec:
  containers:
  - name: mongo-disco
    image: pxrsival/mongo-disco-img:v1
    ports:
    - containerPort: 27017
